Thu Sep 29 12:11:28 GMT 2011  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Add cases to ensure a quoted boolean
	  prefix accepts an empty value or a single space.

Wed Sep 14 04:48:57 GMT 2011  Olly Betts <olly@survex.com>

	* docs/quickstart.rst: Correct link which was to
	  quickstartsearch.cc.html but should be to quickstartindex.cc.html.

Tue Sep 13 08:51:34 GMT 2011  Olly Betts <olly@survex.com>

	* backends/flint_lock.cc: Fix comment typo.

Thu Sep 01 12:50:43 GMT 2011  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: Clarify "sort by date" with BoolWeight
	  example.

Tue Aug 30 13:51:48 GMT 2011  Olly Betts <olly@survex.com>

	* docs/index.rst: Add link to apidoc.pdf.

Wed Aug 24 14:12:05 GMT 2011  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Fix memory leak (caught by existing
	  testcase queryparser1 when run under valgrind).

Wed Aug 24 12:47:49 GMT 2011  Olly Betts <olly@survex.com>

	* queryparser/,tests/queryparsertest.cc,tests/termgentest.cc: Add
	  support for indexing and searching CJK text using n-grams.  Currently
	  this is only enabled if environmental variable XAPIAN_CJK_NGRAM is
	  set to a non-empty value.

Tue Aug 23 03:49:27 GMT 2011  Olly Betts <olly@survex.com>

	* api/vectortermlist.cc,api/vectortermlist.h: Change so that p == NULL
	  represents at_end, and p == data.data() means we've yet to start.

Mon Aug 22 15:30:51 GMT 2011  Olly Betts <olly@survex.com>

	* api/vectortermlist.cc: Add new source file missed from last commit.

Mon Aug 22 14:32:50 GMT 2011  Olly Betts <olly@survex.com>

	* api/,backends/brass/brass_synonym.cc,backends/chert/chert_synonym.cc,
	  common/Makefile.mk,common/vectortermlist.h,
	  queryparser/queryparser.cc: Reimplement VectorTermList to store the
	  list of terms encoded into a single std::string, which is a lot more
	  memory efficient that std::vector<std::string>.

Mon Aug 22 12:22:49 GMT 2011  Olly Betts <olly@survex.com>
